--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <script async src='main.js' type='text/javascript'></script>
 
     <meta name='twitter:card' content='summary'>
@@ -22,61 +23,107 @@
   </head>
   <body>
     <header>
-      <h1><a href='https://artaurus.github.io/quantised/'>-QUANTISED-</a></h1>
+      <h1><a href='http://localhost:8000/'>QUANTISED</a></h1>
     </header>
     <main>
-      <nav>
-        <ul></ul>
-      </nav>
-      <article>
-        <h3>Overview</h3>
+      <section>
         <p>
           Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition.
           <br><br>
           This series of articles could presumably serve as chapters of a book, in which I will elucidate the foundations of the theory while curbing the abstract mathematics. Or at the very least, attempt to do so.
-          <br><br>
-          <b><a href='#Introduction'>Introduction</a></b><br>
-          - Photons<br>
-          - Stationary states<br>
-          - Matrix mechanics
-          <br><br>
-          <b><a href='#Wave-Particle%20Duality'>Wave-Particle Duality</a></b><br>
-          - Matter waves<br>
-          - Wavefunction<br>
-          - Probabilistic interpretation
-          <br><br>
-          <b><a href='#Transformation%20Theory'>Transformation Theory</a></b><br>
-          - State vector<br>
-          - Observables<br>
-          - Time evolution
-          <br><br>
-          <b><a href='#Uncertainty'>Uncertainty</a></b><br>
-          - Position and momentum<br>
-          - Energy and time<br>
-          - General principle
-          <br><br>
-          <b><a href='#Spin'>Spin</a></b><br>
-          - Rotational symmetry
-          <br><br>
-          <b><a href='#Antiparticles'>Antiparticles</a></b><br>
-          - Relativistic emergence
-          <br><br>
-          <b><a href='#Entanglement'>Entanglement</a></b><br>
-          - Nonlocality and causality
-          <br><br>
-          <b><a href='#Interpretations'>Interpretations</a></b><br>
-          - Copenhagen<br>
-          - Realist<br>
-          - Many worlds
-          <br><br>
-          <b><a href='#Measurement'>Measurement</a></b><br>
-          - EPR paper<br>
-          - Hidden variables<br>
-          - Bell inequalities
-          <br><br>
-          A recommendation is the book <i>Quantum</i> by Manjit Kumar; a captivating exposition, including an extensive historical recollection, of the quantum revolution. For the mathematically inclined, my references are Ramamurti Shankar's <i>Principles of Quantum Mechanics</i>, Steven Weinberg's <i>Lectures on Quantum Mechanics</i>, and Paul Dirac's <i>Lectures on Quantum Mechanics and Relativistic Field Theory</i>.
         </p>
-      </article>
+      </section>
+      <nav>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Introduction'>INTRODUCTION</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Photons</li>
+            <li>Stationary states</li>
+            <li>Matrix mechanics</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Wave-Particle Duality'>WAVE-PARTICLE DUALITY</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Matter waves</li>
+            <li>Wavefunction</li>
+            <li>Probabilistic interpretation</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Transformation Theory'>TRANSFORMATION THEORY</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>State vector</li>
+            <li>Observables</li>
+            <li>Time evolution</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Uncertainty'>UNCERTAINTY</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Position and momentum</li>
+            <li>Energy and time</li>
+            <li>General principle</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Spin'>SPIN</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Rotational symmetry</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Antiparticles'>ANTIPARTICLES</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Relativistic emergence</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Entanglement'>ENTANGLEMENT</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Nonlocality and causality</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Interpretations'>INTERPRETATIONS</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>Copenhagen</li>
+            <li>Realist</li>
+            <li>Many worlds</li>
+          </ul>
+        </div>
+        <div class='nav-item'>
+          <div class='nav-tile'></div>
+          <h2><a href='#Measurement'>MEASUREMENT</a></h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <ul>
+            <li>EPR paper</li>
+            <li>Hidden variables</li>
+            <li>Bell inequalities</li>
+          </ul>
+        </div>
+      </nav>
+      <section>
+        <p>
+          To all readers, I recommend the book <i>Quantum</i> by Manjit Kumar; an extensive historical recollection of the quantum revolution. For the mathematically inclined, my references are Ramamurti Shankar's <i>Principles of Quantum Mechanics</i>, Steven Weinberg's <i>Lectures on Quantum Mechanics</i>, and Paul Dirac's <i>Lectures on Quantum Mechanics and Relativistic Field Theory</i>.
+        </p>
+      </section>
     </main>
   </body>
 </html>
