--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
           <ul>
             <li>Photons</li>
             <li>Stationary states</li>
-            <li>Matrix mechanics</li>
           </ul>
         </div>
         <div></div>
@@ -63,7 +62,7 @@
           <ul>
             <li>State vector</li>
             <li>Observables</li>
-            <li>Time evolution</li>
+            <li>Transformations</li>
           </ul>
         </div>
         <div></div>
@@ -80,50 +79,31 @@
         <div class='nav-tile'></div>
         <div class='nav-tile'></div>
         <div class='nav-content'>
-          <h2><a href='#Spin'>SPIN</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
-          <ul>
-            <li>Rotational symmetry</li>
-          </ul>
-        </div>
-        <div></div>
-        <div></div>
-        <div class='nav-content'>
           <h2><a href='#Antiparticles'>ANTIPARTICLES</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
-            <li>Relativistic emergence</li>
+            <li>A relativistic emergence</li>
           </ul>
         </div>
-        <div class='nav-tile'></div>
-        <div class='nav-tile'></div>
+        <div></div>
+        <div></div>
         <div class='nav-content'>
           <h2><a href='#Entanglement'>ENTANGLEMENT</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
+            <li>Spin</li>
             <li>Nonlocality and causality</li>
           </ul>
         </div>
-        <div></div>
-        <div></div>
-        <div class='nav-content'>
-          <h2><a href='#Interpretations'>INTERPRETATIONS</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
-          <ul>
-            <li>Copenhagen</li>
-            <li>Realist</li>
-            <li>Many worlds</li>
-          </ul>
-        </div>
         <div class='nav-tile'></div>
         <div class='nav-tile'></div>
         <div class='nav-content'>
-          <h2><a href='#Measurement'>MEASUREMENT</a></h2>
+          <h2><a href='#Open Questions'>OPEN QUESTIONS</a></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
           <ul>
-            <li>EPR paper</li>
-            <li>Hidden variables</li>
-            <li>Bell inequalities</li>
+            <li>Indeterminacy</li>
+            <li>Origin of wave-particle duality</li>
+            <li>Quantum spacetime</li>
           </ul>
         </div>
         <div></div>
