--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
         <p>
           Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition.
           <br><br>
-          This series of articles could presumably serve as chapters of a book, in which I will elucidate the foundations of the theory while curbing the abstract mathematics. Or at the very least, attempt to do so.
+          In this series of articles, I will attempt to elucidate the foundations of quantum theory.
         </p>
       </section>
       <nav>
         <div class='nav-tile'></div>
         <div class='nav-content'>
           <h2><a href='#Introduction'>INTRODUCTION</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <p>
+            Light, known to exist in the form of electromagnetic waves, is also quantised as particles called <i>photons</i>. Electrons transition between <i>stationary states</i> of the Bohr atomic model through the absorption and emission of photons.
+          </p>
           <ul>
             <li>Photons</li>
             <li>Stationary states</li>
@@ -47,7 +49,9 @@
         <div></div>
         <div class='nav-content'>
           <h2><a href='#Wave-Particle Duality'>WAVE-PARTICLE DUALITY</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <p>
+            A wave nature is postulated for matter particles, explaining the quantisation of stationary states. Schr&ouml;dinger's <i>wavefunction</i> is introduced in coordinate space, attributing a probabilistic interpretation to the position of a particle.
+          </p>
           <ul>
             <li>Matter waves</li>
             <li>Wavefunction</li>
@@ -58,7 +62,9 @@
         <div class='nav-tile'></div>
         <div class='nav-content'>
           <h2><a href='#Transformation Theory'>TRANSFORMATION THEORY</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <p>
+            Formulated by Dirac, this mathematical framework encompasses Schr&ouml;dinger's waves and Heisenberg's matrices. <i>States</i> are represented by vectors in an abstract space. <i>Observables</i>, such as position and momentum, are represented by operators.
+          </p>
           <ul>
             <li>State vector</li>
             <li>Observables</li>
@@ -69,7 +75,9 @@
         <div></div>
         <div class='nav-content'>
           <h2><a href='#Uncertainty'>UNCERTAINTY</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <p>
+            Position and momentum of a particle are limited in the precision of their simultaneous measurement, as a consequence of wave-particle duality. A similar relation exists between energy and time. The general principle of uncertainty between variables depends on their <i>commutation</i>.
+          </p>
           <ul>
             <li>Position and momentum</li>
             <li>Energy and time</li>
@@ -79,34 +87,32 @@
         <div class='nav-tile'></div>
         <div class='nav-tile'></div>
         <div class='nav-content'>
-          <h2><a href='#Antiparticles'>ANTIPARTICLES</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
-          <ul>
-            <li>A relativistic emergence</li>
-          </ul>
-        </div>
-        <div></div>
-        <div></div>
-        <div class='nav-content'>
           <h2><a href='#Entanglement'>ENTANGLEMENT</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <p>
+            Rotational symmetry reveals that particles possess an intrinsic <i>spin</i>. Relativistic quantum mechanics predicts <i>antiparticles</i>, counterparts to all elementary particles. An example incorporating the conserved spin of a particle-antiparticle pair highlights the absurdity of quantum <i>nonlocality</i>, and the question of <i>causality</i>.
+          </p>
           <ul>
             <li>Spin</li>
+            <li>Antiparticles</li>
             <li>Nonlocality and causality</li>
           </ul>
         </div>
-        <div class='nav-tile'></div>
-        <div class='nav-tile'></div>
+        <div></div>
+        <div></div>
         <div class='nav-content'>
           <h2><a href='#Open Questions'>OPEN QUESTIONS</a></h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur sapien nec nisi tristique auctor. Quisque ullamcorper quis metus eu finibus. Proin consectetur, sem non feugiat congue, diam turpis dapibus eros, ut congue odio felis sit amet tellus.</p>
+          <p>
+            Is quantum mechanics complete, in view of its unsatisfying <i>indeterminacy</i>?<br>
+            What is the origin of wave-particle duality?<br>
+            Why is time a background parameter, inconsistent with relativity?
+          </p>
           <ul>
             <li>Indeterminacy</li>
             <li>Origin of wave-particle duality</li>
             <li>Quantum spacetime</li>
           </ul>
         </div>
-        <div></div>
+        <div class='nav-tile'></div>
       </nav>
       <section>
         <p>
