--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name='google-site-verification' content='UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ'>
   </head>
   <body>
+    <canvas id='canvas'></canvas>
     <header>
       <h1><a href='https://artaurus.github.io/quantised/'>QUANTISED</a></h1>
     </header>
@@ -48,12 +49,11 @@
         <div class='nav-content'>
           <h2><a href='#Wave-Particle Duality'>WAVE-PARTICLE DUALITY</a></h2>
           <p>
-            A wave nature is postulated for matter particles, explaining the quantisation of stationary states. Schr&ouml;dinger's <i>wavefunction</i> is introduced in coordinate space, attributing a probabilistic interpretation to the position of a particle.
+            A wave nature is postulated for matter particles, explaining the quantisation of stationary states. Schr&ouml;dinger's <i>wavefunction</i> is introduced in coordinate space, attributing a probabilistic interpretation to the position of a particle. The wavefunction replaces precise orbits with fuzzy <i>orbitals</i>, in the atomic model.
           </p>
           <ul>
             <li>Matter waves</li>
             <li>Wavefunction</li>
-            <li>Probabilistic interpretation</li>
           </ul>
         </div>
         <div class='nav-tile'></div>
@@ -61,12 +61,12 @@
         <div class='nav-content'>
           <h2><a href='#Transformation Theory'>TRANSFORMATION THEORY</a></h2>
           <p>
-            Formulated by Dirac, this mathematical framework encompasses Schr&ouml;dinger's waves and Heisenberg's matrices. <i>States</i> are represented by vectors in an abstract space. <i>Observables</i>, such as position and momentum, are represented by operators.
+            Formulated by Dirac, this mathematical framework encompasses Schr&ouml;dinger's waves and Heisenberg's matrices. <i>States</i> are represented by vectors in an abstract space. <i>Observables</i>, such as position and momentum, are represented by operators. Schr&ouml;dinger's equation is introduced as an eigenvalue equation.
           </p>
           <ul>
             <li>States as vectors</li>
             <li>Observables as operators</li>
-            <li>Transformations</li>
+            <li>Eigenvalue equations</li>
           </ul>
         </div>
         <div></div>
@@ -74,7 +74,7 @@
         <div class='nav-content'>
           <h2><a href='#Uncertainty'>UNCERTAINTY</a></h2>
           <p>
-            Position and momentum of a particle are limited in the precision of their simultaneous measurement, as a consequence of wave-particle duality. A similar relation exists between energy and time. The general principle of uncertainty between variables depends on their <i>commutation</i>.
+            As a consequence of wave-particle duality, position and momentum of a particle are limited in the precision of their simultaneous measurement. A similar relation exists between energy and time. The general principle of uncertainty between variables depends on their <i>commutation</i>.
           </p>
           <ul>
             <li>Position and momentum</li>
@@ -87,12 +87,12 @@
         <div class='nav-content'>
           <h2><a href='#Entanglement'>ENTANGLEMENT</a></h2>
           <p>
-            Rotational symmetry reveals that particles possess an intrinsic <i>spin</i>. Relativistic quantum mechanics predicts <i>antiparticles</i>, counterparts to all elementary particles. An example incorporating the conserved spin of a particle-antiparticle pair highlights the absurdity of quantum <i>nonlocality</i>, and the question of <i>causality</i>.
+            Rotational symmetry reveals that particles possess an intrinsic <i>spin</i>. Relativistic quantum mechanics predicts <i>antiparticles</i>, counterparts to all elementary particles. An example incorporating the conserved spin of a particle-antiparticle pair highlights the absurdity of quantum <i>nonlocality</i>.
           </p>
           <ul>
             <li>Spin</li>
             <li>Antiparticles</li>
-            <li>Nonlocality and causality</li>
+            <li>Nonlocality</li>
           </ul>
         </div>
         <div></div>
