--- a/404.html
+++ b/404.html
@@ -4,26 +4,26 @@
     <meta charset='utf-8'>
     <title>Quantised</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href='favicon.png' rel='icon' type='images/png'>
 
+    <link href='psi.png' rel='icon' type='images/png'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <script async type='text/javascript'>
       location.href = 'https://artaurus.github.io/quantised/';
     </script>
   </head>
   <body>
+    <canvas></canvas>
     <header>
-      <h1>-QUANTISED-</h1>
+      <h1>QUANTISED</h1>
     </header>
     <main>
-      <nav></nav>
-      <article>
+      <section>
         <h3>Error 404</h3>
         <p>The page you are looking for does not exist.</p>
-      </article>
+      </section>
     </main>
   </body>
 </html>
