add: canonical link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name='keywords' content='quantised, quantum mechanics, quantum physics, quantum theory'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+    <link href='https://artaurus.github.io/quantised/' rel='canonical'>
     <link href='images/psi.png' rel='icon' type='images/png'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
@@ -23,7 +24,7 @@
     <meta name='google-site-verification' content='UK_n_Zt1e7Y8-v_RO7W6DAx-yRbAM6VGYVwlwOBe5pQ'>
   </head>
   <body>
-    <canvas id='canvas'></canvas>
+    <canvas></canvas>
     <header>
       <h1><a href='https://artaurus.github.io/quantised/'>QUANTISED</a></h1>
     </header>
@@ -31,6 +32,8 @@
       <section>
         <p>
           Quantum mechanics is the cornerstone of modern physics. In simple words, it illuminates the realm of the very tiny. Despite successfully infiltrating almost every branch of physics, there is no established interpretation of its fundamental principles. Perhaps because it renders an uninvited departure from ordinary human intuition.
+          <br><br>
+          In this series of articles, I aim to elucidate the key concepts of quantum theory. A mathematical background of elementary algebra should suffice for the common reader.
         </p>
       </section>
       <nav>
